Ninja: cmcldeps: cl: Command line warning D9035
When compiling a invalid rc file using Ninja generator on Windows, it complains about
cl : Command line warning D9035 : option 'o' has been deprecated and will be removed in a future release
From the source code https://gitlab.kitware.com/cmake/cmake/-/blob/4a1421efad46b4cbbb5b860f77dae44c9812b552/Source/cmcldeps.cxx#L274-279,
cl
is invoked with /P /out:objfile.dep.obj
, but actually /out:
is an option of link.exe
instead of cl.exe
, and /P
always outputs a .i
file in current directory.